--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && npm run cp",
-    "dev": "env-cmd -f ./.env.local nodemon ./src/app.ts",
+    "dev": "nodemon ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cp": "cp -r ./src/views ./dist/"
   },
